force-app/main/default/classes/Controllers Apex/objects/Candidate_Shubham__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <label>Application Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>