force-app/main/default/classes/Controllers Apex/objects/Candidate_Shubham__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <label>DateOfBirth</label>
    <type>Date</type>
</CustomField>