force-app/main/default/classes/Controllers Apex/objects/Candidate_Shubham__c/fields/Expected_Salarys__c.field-meta.xml
<CustomField>
    <fullName>Expected_Salarys__c</fullName>
    <label>‘Expected Salarys</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>