force-app/main/default/classes/Controllers Apex/objects/Candidate_Shubham__c/fields/Job_Shubham__c.field-meta.xml
<CustomField>
    <fullName>Job_Shubham__c</fullName>
    <label>Job_Shubham</label>
    <referenceTo>Job_Shubham__c</referenceTo>
    <relationshipLabel>Candidate_Shubhams</relationshipLabel>
    <relationshipName>Candidate_Shubhams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>