force-app/main/default/classes/Controllers Apex/objects/Candidate_Shubham__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <formula>IMAGE(&quot;https://th.bing.com/th/id/R.1a06d512a0b666a7cc382395730fd6e0?rik=Y5AroR9oYiCeMg&amp;pid=ImgRaw&amp;r=0&quot;,&quot;Not found&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture</label>
    <type>Text</type>
</CustomField>