force-app/main/default/classes/Controllers Apex/objects/Candidate_Shubham__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Miss</fullName>
            </value>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>mrs.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>