force-app/main/default/classes/Controllers Apex/objects/Candidate_Shubham__c/fields/Selected_Date__c.field-meta.xml
<CustomField>
    <fullName>Selected_Date__c</fullName>
    <label>Selected Date</label>
    <type>Date</type>
</CustomField>